--- a/css/layout3.css
+++ b/css/layout3.css
@@ -169,30 +169,26 @@ div.breadcrumb ul li a:hover {
 .dropdown {
   float: left;
   height: 100%;
+  padding: 14px 16px;
 }
 
 .dropdown .dropbtn {
+  text-align: left;
   font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
   padding: 14px 16px;
+  color: white;
+  border: none;
   background-color: inherit;
-  margin: 0;
-  height: 100%;
 }
 
 .dropdown-content {
   display: none;
-  position: absolute;
   background-color: #333;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
