--- a/css/layout3.css
+++ b/css/layout3.css
@@ -162,47 +162,35 @@ div.breadcrumb ul li a:hover {
   height: 2px;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown {
-  float: left;
-  height: 100%;
-  padding: 14px 16px;
-}
-
-.dropdown .dropbtn {
-  text-align: left;
-  font-size: 16px;
-  padding: 14px 16px;
-  color: white;
-  border: none;
-  background-color: inherit;
-}
-
-.dropdown-content {
-  display: none;
-  background-color: #333;
-  min-width: 160px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
 /*MÓVIL*/
 
 @media only screen and (max-width: 767px) {
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown {
+    float: left;
+    height: 100%;
+  }
+
+  .dropdown .dropbtn {
+    text-align: left;
+    font-size: 16px;
+    color: white;
+    border: none;
+    background-color: inherit;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  .dropdown-content {
+    display: none;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+    padding-left: 14px;
+  }
   .main {
     position: relative;
     width: 100%;
@@ -303,6 +291,7 @@ div.breadcrumb ul li a:hover {
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
+    background-color: white;
   }
 
   .breadcrumb {
@@ -403,6 +392,55 @@ div.breadcrumb ul li a:hover {
 
 /*RESTO*/
 @media only screen and (min-width: 768px) {
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown {
+    float: left;
+    height: 100%;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    margin: 0;
+    height: 100%;
+  }
+
+  .dropdown .dropbtn {
+    text-align: left;
+    font-size: 16px;
+    padding: 14px 16px;
+    color: white;
+    border: none;
+    background-color: inherit;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
   .main {
     position: relative;
     width: 100%;
