--- a/css/invitados.css
+++ b/css/invitados.css
@@ -332,7 +332,7 @@ div.content {
   table {
     margin-top: 3em;
     margin-bottom: 3em;
-
+    align-self: center;
     width: 100%;
     max-width: 60em;
     background-color: #f1f1f1;
