--- a/css/invitados.css
+++ b/css/invitados.css
@@ -260,7 +260,7 @@ div.content {
     padding-top: 1em;
     position: relative;
     float: left;
-    width: 100%;
+    width: 90%;
     margin-left: 5%;
     color: #000000;
     text-align: start;
@@ -332,6 +332,8 @@ div.content {
   table {
     margin-top: 3em;
     margin-bottom: 3em;
+
+    width: 100%;
     max-width: 60em;
     background-color: #f1f1f1;
   }
@@ -349,3 +351,5 @@ div.content {
     border-bottom: 2px solid #de1700;
   }
 }
+
+/*TABLE*/
