--- a/css/actividades.css
+++ b/css/actividades.css
@@ -21,7 +21,7 @@
     margin-left: 3%;
   }
 
-  #miniatureInvert {
+  #miniatureRight {
     float: left;
     width: 40em;
     height: 25em;
@@ -42,7 +42,7 @@
     width: 45%;
   }
 
-  #textInvert {
+  #textRight {
     margin-right: 5%;
   }
 
@@ -78,7 +78,12 @@
     margin: 2%;
   }
 
-  #invert {
+  #actLeft {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #actRight {
     display: flex;
     flex-direction: row-reverse;
   }
@@ -107,7 +112,7 @@
     margin-left: 3%;
   }
 
-  #miniatureInvert {
+  #miniatureRight {
     float: left;
     width: 40em;
     height: 25em;
@@ -128,7 +133,7 @@
     width: 45%;
   }
 
-  #textInvert {
+  #textRight {
     margin-right: 5%;
   }
 
@@ -164,7 +169,12 @@
     margin: 2%;
   }
 
-  #invert {
+  #actLeft {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #actRight {
     display: flex;
     flex-direction: row-reverse;
   }
