--- a/css/layout3.css
+++ b/css/layout3.css
@@ -45,7 +45,7 @@ div.breadcrumb ul li a:hover {
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: red;
 }
 
 .rrss {
@@ -307,13 +307,13 @@ div.breadcrumb ul li a:hover {
   #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 130px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: red;
+    background-color: rgb(255, 0, 0, 0.35);
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -615,13 +615,13 @@ div.breadcrumb ul li a:hover {
   #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 130px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: red;
+    background-color: rgb(255, 0, 0, 0.35);
     color: white;
     cursor: pointer;
     padding: 15px;
