--- a/css/invitados.css
+++ b/css/invitados.css
@@ -8,7 +8,6 @@
   align-items: center;
   flex-direction: column;
   padding-top: 0.5%;
-  font-family: "Roboto";
 }
 
 div.content {
@@ -111,7 +110,7 @@ div.content {
 
   #rol {
     line-height: 2px;
-    font-weight: lighter;
+    font-weight: bolder;
     color: #de1700;
   }
 
