--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,33 +1,42 @@
 @media only screen and (min-width: 768px) {
-  .content {
-    margin: 2%;
-    align-self: center;
-    width: 85%;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.8;
-  }
-
   .main {
     position: relative;
     width: 100%;
     content: "";
-    clear: both;
     display: flex;
+    clear: both;
+    /*justify-content: center;*/
+    align-items: center;
     flex-direction: column;
     padding-top: 0.5%;
-    font-family: "Roboto";
   }
 
-  .text {
-    position: relative;
-    margin-top: 5%;
+  .information {
+    width: 80%;
+    padding-top: 3em;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-direction: column;
   }
 
-  .titleBox {
+  .information-box {
+    margin-left: 200px;
+  }
+
+  article {
+    margin-bottom: 5em;
+    align-self: center;
+  }
+
+  div.content {
+    /*display: flex;*/
     width: 100%;
-    float: left;
-    background-image: url("../../images/fondos/header.png");
+  }
+
+  .header {
+    width: 100%;
+    background-image: url("../images/noticias/master.jpg");
     height: 16em;
     padding-top: 6.5em;
     background-size: contain;
@@ -58,7 +67,7 @@
     font-family: "Roboto";
   }
 
-  .text{
+  .text {
     margin-top: 5%;
   }
 
