--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@
 #rol {
   line-height: 2px;
   font-weight: lighter;
-  color: #de1700;
+  color: #b11200;
 }
 
 .section {
@@ -87,7 +87,7 @@
 }
 
 .content .section .title h1 {
-  border-bottom: 3px solid #de1700;
+  border-bottom: 3px solid #b11200;
 }
 
 .title {
