--- a/css/layout.css
+++ b/css/layout.css
@@ -241,7 +241,7 @@ div.breadcrumb ul li + li::before {
   } */
 
   #title span {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
     margin-top: 50%;
     font-size: 50px;
     font-weight: bold;
@@ -250,7 +250,7 @@ div.breadcrumb ul li + li::before {
   }
 
   #titles {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
     margin-top: 5%;
     font-size: 30px;
     font-weight: bold;
@@ -524,7 +524,7 @@ div.breadcrumb ul li + li::before {
   }
 
   #title span {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
     margin-top: 50%;
     font-size: 100px;
     font-weight: bold;
@@ -533,7 +533,7 @@ div.breadcrumb ul li + li::before {
   }
 
   #titles {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
     margin-top: 5%;
     font-size: 30px;
     font-weight: bold;
