--- a/css/localizacion.css
+++ b/css/localizacion.css
@@ -20,7 +20,7 @@
   }
 
   .main article h1 {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
   }
 
   .main article iframe {
@@ -52,7 +52,7 @@
   }
 
   .main article h1 {
-    border-bottom: 3px solid #de1700;
+    border-bottom: 3px solid #b11200;
   }
 
   .main article iframe {
