--- a/css/layout.css
+++ b/css/layout.css
@@ -33,7 +33,7 @@ div.breadcrumb ul li a {
 }
 
 div.breadcrumb ul li a:hover {
-  color: #01447e;
+  color: #497583;
   text-decoration: underline;
 }
 
@@ -273,7 +273,7 @@ div.breadcrumb ul li + li::before {
     left: 0%;
     width: 100%;
     /*height: 10%;*/
-    background-color: #4d7c8a;
+    background-color: #497583;
     color: #ffffff;
   }
 
@@ -558,7 +558,7 @@ div.breadcrumb ul li + li::before {
     left: 0%;
     width: 100%;
     /*height: 10%;*/
-    background-color: #4d7c8a;
+    background-color: #497583;
     color: #ffffff;
   }
 
