--- a/css/horarios.css
+++ b/css/horarios.css
@@ -197,9 +197,9 @@
 }
 
 .type-5 {
-  background-color: #ffc300;
+  background-color: #304d55;
 }
 
 .type-6 {
-  background-color: #5fa7a3;
+  background-color: #497583;
 }
