--- a/css/bases.css
+++ b/css/bases.css
@@ -18,21 +18,6 @@
     line-height: 1.8;
   }
 
-  .accordion,
-  .accordion1,
-  .accordion2 {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-
   .panel {
     padding: 0 18px;
     display: none;
@@ -61,21 +46,6 @@
     line-height: 1.8;
   }
 
-  .accordion,
-  .accordion1,
-  .accordion2 {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-
   .panel {
     padding: 0 18px;
     display: none;
@@ -90,7 +60,7 @@
 
 .active,
 .accordion:hover {
-  background-color: #de1800;
+  background-color: rgba(23, 23, 23, 0.9);
   color: white;
 }
 
@@ -104,4 +74,20 @@
 .accordion2:hover {
   background-color: #d8ac34;
   color: white;
+}
+
+.accordion,
+.accordion1,
+.accordion2 {
+  background-color: #cfcfcf;
+  margin-bottom: 0.5em;
+  color: rgb(37, 37, 37);
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
 }
