--- a/css/actividades.css
+++ b/css/actividades.css
@@ -94,8 +94,8 @@
 
   #miniature {
     float: left;
-    width: 20em;
-    height: 18em;
+    width: 45%;
+    height: 100%;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -104,8 +104,8 @@
 
   #miniatureRight {
     float: left;
-    width: 20em;
-    height: 18em;
+    width: 45%;
+    height: 100%;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
