--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
   border-radius: 5px;
 }
 
-#miniature {
+.miniature {
   position: relative;
   float: left;
   box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
@@ -28,7 +28,7 @@
   border: 3px solid #414141;
 }
 
-#confirmation {
+.confirmation {
   float: left;
   box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -63,7 +63,7 @@
   text-align: start;
 }
 
-#rol {
+.rol {
   line-height: 2px;
   font-weight: lighter;
   color: #b11200;
@@ -138,14 +138,14 @@
     width: 70%;
   }
 
-  #miniature {
+  .miniature {
     width: 3em;
     height: 3em;
     margin-left: 10%;
     margin-top: 3%;
   }
 
-  #confirmation {
+  .confirmation {
     width: 14em;
     height: 16em;
     margin-top: 3%;
@@ -200,14 +200,14 @@
     width: 70%;
   }
 
-  #miniature {
+  .miniature {
     width: 3em;
     height: 3em;
     margin-left: 10%;
     margin-top: 3%;
   }
 
-  #confirmation {
+  .confirmation {
     width: 14em;
     height: 16em;
   }
