--- a/css/actividades.css
+++ b/css/actividades.css
@@ -1,6 +1,3 @@
-.activity img {
-  height: 100%;
-}
 @media only screen and (min-width: 768px) {
   .main {
     position: relative;
@@ -67,10 +64,6 @@
     color: #b11200;
   }
 
-  .activity {
-    margin: 2%;
-  }
-
   #actLeft {
     display: flex;
     flex-direction: row;
@@ -97,8 +90,9 @@
 
   #miniature {
     float: left;
-    width: 45%;
-    height: 100%;
+    width: 50%;
+    height: 12.5 em;
+    object-fit: contain;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -148,10 +142,6 @@
     color: #b11200;
   }
 
-  .activity {
-    margin: 2%;
-  }
-
   #actLeft {
     display: flex;
     flex-direction: row;
@@ -161,4 +151,10 @@
     display: flex;
     flex-direction: row-reverse;
   }
+}
+
+.activity {
+  margin: 2%;
+  background-color: white;
+  border-radius: 20px;
 }
