--- a/css/actividades.css
+++ b/css/actividades.css
@@ -80,8 +80,8 @@
 
   #miniature {
     float: left;
-    width: 50%;
-    height: 100%;
+    max-width: 50%;
+    height: auto;
     object-fit: cover;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
