--- a/css/actividades.css
+++ b/css/actividades.css
@@ -81,7 +81,7 @@
   #miniature {
     float: left;
     max-width: 50%;
-    height: auto;
+    max-height: 100%;
     object-fit: cover;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
