--- a/css/actividades.css
+++ b/css/actividades.css
@@ -15,10 +15,9 @@
     float: left;
     width: 40em;
     height: 25em;
-    margin-top: 3%;
+    margin: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    margin-left: 3%;
   }
 
   .text {
@@ -83,10 +82,10 @@
     max-width: 50%;
     max-height: 20em;
     object-fit: cover;
-    margin-top: 3%;
+    margin: 3%;
+    align-self: center;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    margin-left: 3%;
   }
 
   .text {
