--- a/css/actividades.css
+++ b/css/actividades.css
@@ -80,7 +80,7 @@
   #miniature {
     float: left;
     max-width: 50%;
-    max-height: 20em;
+    height: 20em;
     object-fit: cover;
     margin: 3%;
     align-self: center;
