--- a/css/actividades.css
+++ b/css/actividades.css
@@ -85,7 +85,7 @@
     align-self: center;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    background-position-x: -30%;
+    background-position-x: 5em;
   }
 
   .text {
